--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
 			"runtimeExecutable": "${execPath}",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}",
-				"${workspaceFolder}/../playwright/examples/todomvc"
+				"${workspaceFolder}/../playwright-rt"
 			],
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
