--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "@babel/helper-plugin-utils": "^7.22.5",
     "@babel/parser": "^7.23.0",
     "@babel/traverse": "^7.23.2",
+    "node-fetch": "^3.3.2",
     "stack-utils": "^2.0.6",
     "which": "^4.0.0",
     "ws": "^8.11.0"
